# Titan

./: .gitignore  CLAUDE.md  README.md
backend/: README.md  demo.py  pyproject.toml
backend/data/: deck_config.json  devices.json  saved_locations.json  tracks.json
backend/src/: __init__.py  main.py
backend/src/actors/: __init__.py  base.py  messages.py  mover_actor.py  plate_actor.py
backend/src/api/: __init__.py  deck_editor.py  devices.py  locations.py  tracks.py
backend/src/models/: __init__.py  coordinates.py  deck.py
backend/src/services/: __init__.py  deck_storage.py  event_bus.py  location_manager.py  mover_pool.py  track_manager.py
docs/architecture/: CONSTITUTION.md  actor-model.md  plate-actor.md  ui-ux-concept.md
frontend/: nuxt.config.ts  package-lock.json  package.json
frontend/assets/css/: main.css
frontend/components/: DeckView.vue
frontend/components/config/: DevicePalette.vue  DeviceProperties.vue  LayerControls.vue  WorkcellCanvas.vue
frontend/components/deck/: DeckEditor.vue  DeckGrid.vue  LocationLayer.vue  MoverLayer.vue  TrackDesigner.vue  TrackLayer.vue
frontend/composables/: useDeckEditor.ts  useDeviceManager.ts  useMoverTracking.ts  useTitanApi.ts  useTitanEvents.ts
frontend/layouts/: default.vue
frontend/pages/: deck-editor.vue  index.vue  system-config.vue
frontend/types/: deck.ts  device.ts
